# acube

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_INSTRUCTIONS_v3.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
a3/: Cargo.toml
a3-macros/: Cargo.toml
a3-macros/src/: endpoint.rs  error.rs  lib.rs  schema.rs
a3/src/: error.rs  extract.rs  lib.rs  rate_limit.rs  runtime.rs  schema.rs  security.rs  types.rs
a3/templates/: AI_INSTRUCTIONS.md
acube/: Cargo.toml
acube-macros/: Cargo.toml
acube-macros/src/: endpoint.rs  error.rs  lib.rs  schema.rs
acube/src/: error.rs  extract.rs  lib.rs  rate_limit.rs  runtime.rs  schema.rs  security.rs  types.rs
acube/templates/: AI_INSTRUCTIONS.md
benchmarks/: audit.md  report.md  spec.md
benchmarks/a3-v2/: audit.md
benchmarks/a3-v2/run1/: main.rs
benchmarks/a3-v2/run2/: main.rs
benchmarks/a3-v2/run3/: main.rs
benchmarks/a3/run1/: main.rs
benchmarks/a3/run2/: main.rs
benchmarks/a3/run3/: main.rs
benchmarks/axum/run1/: main.rs
benchmarks/axum/run2/: main.rs
benchmarks/axum/run3/: main.rs
benchmarks/express/run1/: app.js
benchmarks/express/run2/: app.js
benchmarks/express/run3/: app.js
benchmarks/fastapi/run1/: main.py
benchmarks/fastapi/run2/: main.py
benchmarks/fastapi/run3/: main.py
benchmarks/performance/: Cargo.toml  RESULTS.md  run_benchmarks.sh
benchmarks/performance/src/: a3_full_server.rs  a3_minimal_server.rs  acube_full_server.rs  acube_minimal_server.rs  raw_axum_server.rs
benchmarks/v2/: report.md  spec.md
benchmarks/v2/a3/run1/: main.rs
benchmarks/v2/a3/run2/: main.rs
benchmarks/v2/a3/run3/: main.rs
benchmarks/v2/axum/run1/: Cargo.toml  main.rs
benchmarks/v2/axum/run2/: main.rs
benchmarks/v2/axum/run3/: main.rs
benchmarks/v2/express/run1/: app.js
benchmarks/v2/express/run2/: app.js
benchmarks/v2/express/run3/: app.js
benchmarks/v2/fastapi/run1/: app.py
benchmarks/v2/fastapi/run2/: app.py
benchmarks/v2/fastapi/run3/: app.py
cargo-a3/: Cargo.toml
cargo-a3/src/: main.rs
cargo-acube/: Cargo.toml
cargo-acube/src/: main.rs
examples/: hello.rs  user_service.rs
tests/: design_invariants.rs  endpoint_compile_tests.rs  endpoint_tests.rs  error_tests.rs  integration_tests.rs  openapi_tests.rs  phase5_tests.rs  pipeline_tests.rs  schema_compile_tests.rs  schema_proptest.rs  schema_tests.rs
tests/compile_fail/: endpoint_authorize_jwt_public.rs  endpoint_authorize_jwt_public.stderr  endpoint_authorize_none_scopes.rs  endpoint_authorize_none_scopes.stderr  endpoint_missing_authorize.rs  endpoint_missing_authorize.stderr  endpoint_missing_security.rs  endpoint_missing_security.stderr  error_missing_message.rs  error_missing_message.stderr  error_missing_status.rs  error_missing_status.stderr  error_on_struct.rs  error_on_struct.stderr  schema_on_enum.rs  schema_on_enum.stderr  schema_on_tuple_struct.rs  schema_on_tuple_struct.stderr
tests/test_keys/: ec_private.pem  ec_public.pem  rsa_private.pem  rsa_public.pem
