[package]
name = "acube-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Proc macros for the acube security framework"
repository = "https://github.com/lewKcoder/acube"
keywords = ["web", "security", "framework", "ai", "axum"]
categories = ["web-programming::http-server"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"
