[package]
name = "acube-performance-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
acube = { path = "../../acube" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "10"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }

[[bin]]
name = "raw_axum_server"
path = "src/raw_axum_server.rs"

[[bin]]
name = "acube_minimal_server"
path = "src/acube_minimal_server.rs"

[[bin]]
name = "acube_full_server"
path = "src/acube_full_server.rs"
