[workspace]

[package]
name = "axum-user-profile"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "axum-user-profile"
path = "main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
